<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ConnectedDevice">

    <include
        android:id="@+id/cd_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/d10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_grey80"
            android:orientation="vertical"
            android:padding="@dimen/d10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devname" />

            <TextView
                android:id="@+id/cd_devname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d5"
                android:layout_marginBottom="@dimen/d10"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devadd" />

            <TextView
                android:id="@+id/cd_devadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d5"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/cd_setthreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/d10"
            android:layout_marginBottom="@dimen/d10"
            android:background="@drawable/rc_grey"
            android:text="@string/setthreshold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cd_lay"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d10"
                android:background="@drawable/rc_grey80"
                android:orientation="vertical"
                android:padding="@dimen/d10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/minthres" />

                    <Space
                        android:layout_width="@dimen/d10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/cd_minthres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/maxthres" />

                    <Space
                        android:layout_width="@dimen/d10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/cd_maxthres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/cd_listen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rc_grey"
                android:paddingStart="@dimen/d20"
                android:paddingEnd="@dimen/d20"
                android:text="@string/startlistening"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rc_grey"
                android:orientation="horizontal"
                android:padding="@dimen/d10">

                <TextView
                    android:id="@+id/cd_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/d5"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cd_stoplistening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rc_grey"
                android:paddingStart="@dimen/d20"
                android:paddingEnd="@dimen/d20"
                android:text="@string/stoplistening"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>